--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ input {
     width: 300px;
     
     margin-top: 10px;
+    margin-left: 10px;
     margin-right: 10px;
     float: left;
     border: none;
