--- a/style.css
+++ b/style.css
@@ -70,3 +70,44 @@ input {
     overflow: hidden;  
     outline: none;  
 }
+input[type=checkbox] {
+  height: 20px;
+    width: 30px;    
+    margin-top: 2px;
+    margin-left: 2px;
+    margin-right: 2px;
+    margin-bottom: 2px;
+    float: left;
+    border: none;
+    border-bottom: 0.5px solid #555353;
+    overflow: hidden;  
+    outline: none;  
+}
+table { 
+  width: 100%; 
+  border-collapse: collapse;  
+   margin-top: 15px;
+    
+    padding: 6px;
+}
+/* Zebra striping */
+tr:nth-of-type(odd) { 
+  background: #eee; 
+}
+th { 
+  background: #333; 
+  font-size: 14px;
+  color: white; 
+  font-weight: bold;
+  font-family: nhg-display-bold,Arial,Helvetica,sans-serif;
+  text-align: center; 
+  padding: 5px; 
+  border: 1px solid #ccc; 
+}
+td { 
+      font-size: 13px;
+  padding: 5px; 
+  border: 1px solid #ccc; 
+  text-align: left; 
+  font-family: nhg-display-bold,Arial,Helvetica,sans-serif;
+}
